# expready

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
src/expready/: __init__.py  __main__.py  cli.py  preflight.py  validation.py
src/expready/loaders/: __init__.py  manifest_loader.py  matrix_loader.py  metadata_loader.py  table_loader.py
src/expready/models/: __init__.py  issue.py  report.py  study_config.py  table.py
src/expready/reports/: __init__.py  console_report.py  html_report.py
src/expready/rules/: __init__.py  definitions.py
src/expready/validators/: __init__.py  crossfile_validator.py  design_validator.py  metadata_validator.py  (+1 more)
tests/: test_cli.py  test_crossfile_validation.py  test_delimiter_detection.py  test_design_validation.py  test_loader_delimiters.py  test_manifest_validation.py  test_metadata_validation.py  test_preflight.py  test_report_serialization.py  test_study_summary.py
tests/fixtures/: manifest_custom_sample.tsv  manifest_mismatch.tsv  manifest_sample_upper_underscore.tsv  manifest_valid.tsv  matrix_annotation.tsv  matrix_auto.tsv  matrix_inconsistent_delimiter.tsv  matrix_mismatch.tsv  matrix_mixed_delimiter.txt  matrix_otu_header.tsv  matrix_valid.tsv  metadata_bom.csv  metadata_condition_titlecase.csv  metadata_confounded.csv  metadata_custom_sample.csv  metadata_duplicate.csv  metadata_low_repl.csv  metadata_missing_required.csv  metadata_quoted.csv  metadata_sample_dash_case.csv  metadata_space_delimited.txt  metadata_space_header.csv  metadata_treatment.csv
