[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expready"
version = "0.1.0"
description = "Experiment Readiness Checker"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Sharu Paul Sharma" },
]
keywords = [
  "bioinformatics",
  "validation",
  "metadata",
  "experiment-design",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Environment :: Console",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/SharuPaul/expready"
Repository = "https://github.com/SharuPaul/expready"
Issues = "https://github.com/SharuPaul/expready/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
expready = "expready.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
